--- a/requirements.txt
+++ b/requirements.txt
@@ -3,23 +3,25 @@ aiohttp==3.12.13
 aiohttp-retry==2.9.1
 aiosignal==1.3.2
 attrs==25.3.0
-bcrypt
-blinker
+bcrypt 
+blinker 
 certifi==2025.6.15
 charset-normalizer==3.4.2
-click
+click 
 cloudinary==1.44.1
 dnspython==1.16.0
-Flask
-Flask-Bcrypt
-Flask-Login
-Flask-WTF
+Flask 
+Flask-Bcrypt 
+Flask-Login 
+Flask-WTF 
 frozenlist==1.7.0
+gunicorn==23.0.0
 idna==3.10
-itsdangerous
-Jinja2
-MarkupSafe
+itsdangerous 
+Jinja2 
+MarkupSafe 
 multidict==6.5.1
+packaging==25.0
 propcache==0.3.2
 PyJWT==2.10.1
 pymongo==3.12.0
@@ -28,7 +30,7 @@ setuptools==78.1.1
 six==1.17.0
 twilio==9.6.3
 urllib3==2.4.0
-Werkzeug
+Werkzeug 
 wheel==0.45.1
-WTForms
-yarl==1.20.1
+WTForms 
+yarl==1.20.
